--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Book A Spot </h4>
                             <h1 class="display-1 text-white mb-md-4">Best Parking Space in Your Location</h1>
-                            <a href="form.html" class="btn btn-primary py-md-3 px-md-5 mt-2">Book Spot now </a>
+                            <a href="https://parkoba.vercel.app/" target="_blank"
+                                class="btn btn-primary py-md-3 px-md-5 mt-2">Book Spot
+                                now </a>
                         </div>
                     </div>
                 </div>
@@ -179,7 +181,9 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Book A Spot</h4>
                             <h1 class="display-1 text-white mb-md-4">Quality Spots with Unlimited surveillance</h1>
-                            <a href="form.html" class="btn btn-primary py-md-3 px-md-5 mt-2">Book Spot Now</a>
+                            <a href="https://parkoba.vercel.app/" target="_blank"
+                                class="btn btn-primary py-md-3 px-md-5 mt-2">Book Spot
+                                Now</a>
                         </div>
                     </div>
                 </div>
@@ -468,7 +472,6 @@
                             </div>
                             <div class="px-2 border-left border-right">
                                 <i class="fa fa-cogs text-primary mr-1"></i>
-                                <span>AUTO</span>
                             </div>
                             <div class="px-2">
                                 <i class="fa fa-road text-primary mr-1"></i>
